--- a/src/web/css/dl.css
+++ b/src/web/css/dl.css
@@ -4,6 +4,7 @@ html, body {
 
 html {
   background-image: url(../res/bg.jpeg);
+  background-size: cover;
   font-family: Arial, Helvetica, sans-serif;
 }
 
