--- a/static/css/dl.css
+++ b/static/css/dl.css
@@ -46,7 +46,21 @@ desc {
   font-variant: normal;
   font-style: oblique;
   color: #f2f2f2;
-  font-size: 1.15em;
+  font-size: 1em;
+}
+
+a {
+  color: #d9d9d9;
+}
+
+p {
+  text-align: center;
+  font-weight: lighter;
+  text-shadow:  0 0 5px #d9d9d9;
+  font-variant: normal;
+  font-style: normal;
+  color: #f2f2f2;
+  font-size: 0.8em;
 }
 
 button {
